syntax = "proto3";

option csharp_namespace = "Spravy.PasswordGenerator.Protos";

import "Protos/password_generator_messages.proto";

package spravy.password_generator;

service UserSecretService {
    rpc GetUserSecret (GetUserSecretRequest) returns (GetUserSecretReply);
}

service PasswordService {
    rpc AddPasswordItem (AddPasswordItemRequest) returns (AddPasswordItemReply);
    rpc GetPasswordItems (GetPasswordItemsRequest) returns (GetPasswordItemsReply);
    rpc GetPasswordItem (GetPasswordItemRequest) returns (GetPasswordItemReply);
    rpc RemovePasswordItem (RemovePasswordItemRequest) returns (RemovePasswordItemReply);
    rpc GeneratePassword (GeneratePasswordRequest) returns (GeneratePasswordReply);
    rpc UpdatePasswordItemName (UpdatePasswordItemNameRequest) returns (UpdatePasswordItemNameReply);
    rpc UpdatePasswordItemKey (UpdatePasswordItemKeyRequest) returns (UpdatePasswordItemKeyReply);
    rpc UpdatePasswordItemIsAvailableUpperLatin (UpdatePasswordItemIsAvailableUpperLatinRequest) returns (UpdatePasswordItemIsAvailableUpperLatinReply);
    rpc UpdatePasswordItemLength (UpdatePasswordItemLengthRequest) returns (UpdatePasswordItemLengthReply);
    rpc UpdatePasswordItemRegex (UpdatePasswordItemRegexRequest) returns (UpdatePasswordItemRegexReply);
    rpc UpdatePasswordItemIsAvailableLowerLatin (UpdatePasswordItemIsAvailableLowerLatinRequest) returns (UpdatePasswordItemIsAvailableLowerLatinReply);
    rpc UpdatePasswordItemIsAvailableSpecialSymbols (UpdatePasswordItemIsAvailableSpecialSymbolsRequest) returns (UpdatePasswordItemIsAvailableSpecialSymbolsReply);
    rpc UpdatePasswordItemIsAvailableNumber (UpdatePasswordItemIsAvailableNumberRequest) returns (UpdatePasswordItemIsAvailableNumberReply);
    rpc UpdatePasswordItemCustomAvailableCharacters (UpdatePasswordItemCustomAvailableCharactersRequest) returns (UpdatePasswordItemCustomAvailableCharactersReply);
}